[package]
name = "cart_container"
version = "0.1.0"
edition = "2021"

[lib]
name = "cart"
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0" # Error handling library
serde_json = "1.0" # JSON library

bytes = "1.3"
flate2 = "1"

libc = "0.2"

# crypto packages from the RustCrypto project
cipher = { version = "0.4", features = [ "std" ] }
rc4 = "0.1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "*"