[package]
name = "cart_container"
version = "1.0.0-alpha"
edition = "2021"
authors = ["The Canadian Center for Cybersecurity"]
license = "MIT"
readme = "../readme.md"
repository = "https://github.com/CybercentreCanada/cart-rs"
#documentation = ""
#homepage = ""
description = """
The CaRT file format is used to store or transfer malware and it's associated metadata.
It neuters the malware so it cannot be executed, and encrypts it so anti-virus software cannot flag the CaRT file as malware.
"""
keywords = ["cybersecurity"]
categories = ["algorithms", "compression", "encoding"]

[lib]
crate-type = ["lib"]

[features]
default = ["md5", "sha1"]
md5 = ["dep:md-5"]
sha1 = ["dep:sha1"]

[dependencies]
serde_json = "1.0" # JSON library

# Data handling libraries
bytes = "1.3"
flate2 = "1"

# crypto packages from the RustCrypto project
# cipher = { version = "0.4", features = [ "std" ] }
rc4 = "0.1"
md-5 = { version= "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
