[package]
name = "cart"
publish = false
version = "1.0.0-alpha"
edition = "2021"
authors = ["The Canadian Center for Cybersecurity"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/CybercentreCanada/cart-rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cart_container = { "version" = "1.0.0", "path" = "../cart_container" }
serde_json = "1.0" # JSON library

# Interface for interacting with c types
libc = "0.2"

[dev-dependencies]
tempfile = "3"
